@@ -1,6 +1,6 @@
 Package: batchelor
-Version: 1.7.9
-Date: 2021-02-02
+Version: 1.7.10
+Date: 2021-03-03
 Title: Single-Cell Batch Correction Methods
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
     person("Laleh", "Haghverdi", role="ctb"))
