@@ -18,6 +18,7 @@ export(divideIntoBatches)
 export(fastMNN)
 export(findMutualNN)
 export(mnnCorrect)
+export(mnnDeltaVariance)
 export(multiBatchNorm)
 export(multiBatchPCA)
 export(noCorrect)
@@ -32,8 +33,10 @@ exportClasses(RegressParam)
 exportClasses(RescaleParam)
 exportMethods(batchCorrect)
 import(methods)
+importClassesFrom(DelayedArray,SparseArraySeed)
 importClassesFrom(DelayedArray,integer_OR_NULL)
 importClassesFrom(Matrix,dsparseMatrix)
+importClassesFrom(Matrix,sparseMatrix)
 importClassesFrom(S4Vectors,DataFrame)
 importClassesFrom(S4Vectors,List)
 importClassesFrom(S4Vectors,SimpleList)
@@ -61,7 +64,9 @@ importFrom(BiocSingular,runPCA)
 importFrom(BiocSingular,runSVD)
 importFrom(DelayedArray,"seed<-")
 importFrom(DelayedArray,DelayedArray)
+importFrom(DelayedArray,blockApply)
 importFrom(DelayedArray,getAutoBPPARAM)
+importFrom(DelayedArray,rowAutoGrid)
 importFrom(DelayedArray,seed)
 importFrom(DelayedArray,setAutoBPPARAM)
 importFrom(DelayedArray,sweep)
